crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_qualified_column.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select t.current, t.filter, t.action from t

-- Output:
select
  t.current,
  t.filter,
  t.action
from t;
