crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_subquery_column.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select * from (select current, filter from t)

-- Output:
select * from (
  select
    current,
    filter
  from t
);
