crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_table_alias.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select filter.id from foo filter

-- Output:
select filter.id from foo filter;
