crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_table_name.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select * from action

-- Output:
select * from action;
