crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_update_target.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- update t set current = 1, action = 'done'

-- Output:
update t
set
  current = 1,
  action = 'done';
