crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_comparison_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select glob, regexp, match, escape, like from t

-- Output:
select
  "glob",
  regexp,
  match,
  escape,
  "like"
from t;
