crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_conflict_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select abort, fail, ignore, conflict, do, nothing from t

-- Output:
select
  abort,
  fail,
  ignore,
  conflict,
  do,
  nothing
from t;
