crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_constraint_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select constraint, primary, unique, check, foreign, references, autoincrement, collate from t

-- Output:
select
  "constraint",
  "primary",
  "unique",
  "check",
  "foreign",
  "references",
  autoincrement,
  "collate"
from t;
