crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_ddl_keywords_as_columns.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select column, rename, trigger, virtual, temp, temporary, view, indexed, without, add from t

-- Output:
select
  column,
  rename,
  "trigger",
  virtual,
  temp,
  temporary,
  "view",
  indexed,
  without,
  add
from t;
