crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_in_case_expression.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select case when current = 1 then action else nothing end from t

-- Output:
select
  case
    when current = 1 then action
    else nothing
  end
from t;
