crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_in_group_by.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select action, count(*) from events group by action

-- Output:
select
  action,
  count(*)
from events
group by action;
