crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_in_order_by.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select * from t order by current asc, action desc

-- Output:
select *
from t
order by current asc, action desc;
